# simd-exp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: abs_bench.cpp  bench_harness.hpp  bench_utils.hpp  clamp_bench.cpp  dot_prod.cpp  dot_prod_bench.cpp  mat_transpose_bench.cpp  matmul_bench.cpp  online_softmax_bench.cpp  plot_bench.py  relu_bench.cpp  softmax_bench.cpp  sum_bench.cpp
bench/results/: abs_bench.json  clamp_bench.json  dot_prod.json  dot_prod_bench.json  mat_transpose_bench.json  matmul_bench.json  online_softmax_bench.json  relu_bench.json  softmax_bench.json  sum_bench.json
docs/: LEARNINGS.md  adding_new_operations.md  exp_approximation.md  gemm_workbook.md  notes.md
include/simd/: common.hpp  math_utils.hpp  simd.hpp
include/simd/ops/abs/: abs.hpp  scalar.hpp  simd.hpp
include/simd/ops/clamp/: clamp.hpp  scalar.hpp  simd.hpp
include/simd/ops/dot_prod/: dot_prod.hpp  scalar.hpp  simd.hpp
include/simd/ops/mat_transpose/: mat_transpose.hpp  scalar.hpp  simd.hpp
include/simd/ops/matmul/: f16.hpp  matmul.hpp  scalar.hpp  simd.hpp
include/simd/ops/online-softmax/: scalar.hpp  simd.hpp
include/simd/ops/online_softmax/: online_softmax.hpp  scalar.hpp  simd.hpp
include/simd/ops/relu/: relu.hpp  scalar.hpp  simd.hpp
include/simd/ops/softmax/: scalar.hpp  simd.hpp  softmax.hpp
include/simd/ops/sum/: scalar.hpp  simd.hpp  sum.hpp
test/: abs_test.cpp  clamp_test.cpp  dot_prod_test.cpp  mat_transpose_test.cpp  math_utils_test.cpp  matmul_test.cpp  online_softmax_test.cpp  relu_test.cpp  softmax_test.cpp  sum_test.cpp  test_harness.hpp
